# bazel-central-portal-test

./: .autorc  .bazelrc  BUILD  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  pom.tpl  release.sh
.github/workflows/: ci.yml
src/main/kotlin/com/sugarmanz/test/: CentralPortalBazel.kt
