module(
    name = "bazel-central-portal-test",
    version = "1.0",
)

bazel_dep(name = "rules_player")
git_override(
    module_name = "rules_player",
    commit = "9130cf2fb09d9df6a4de96c2da62166c829005f9",
    remote = "https://github.com/player-ui/rules_player.git",
)

bazel_dep(name = "rules_jvm_external")
git_override(
    module_name = "rules_jvm_external",
    commit = "73b63ba801f14d1bde7807994cc8c15db226ceec",
    remote = "https://github.com/sugarmanz/rules_jvm_external.git",
)
